2011-07-20  Eric Seidel  <eric@webkit.org>

        Move HttpLock to using a FileSystem object
        https://bugs.webkit.org/show_bug.cgi?id=64885

        Reviewed by Adam Barth.

        I made a typo in my previous change, taking the value
        of read_text_file(pid_file) and setting it to lock_pid_file
        instead of current_pid.  Fixed now. :)

        In order to test my new change I had to overhaul the unittests
        for this class to create a separate set of tests which work off
        of Mock objects instead of the real filesystem.

        Since Executive doesn't yet wrap os.getpid() I added a FIXME
        in several places where we're currently calling os.getpid().  I
        felt adding Executive.getpid was outside of the scope of this change
        but once it exists some of this code will be much simpler to mock.

        * Scripts/webkitpy/layout_tests/port/http_lock.py:
        * Scripts/webkitpy/layout_tests/port/http_lock_unittest.py:
        * Scripts/webkitpy/tool/mocktool.py:

2011-07-20  Adam Roben  <aroben@apple.com>

        Fix typo in TestFailures's Bugzilla constants

        This was preventing the "Version" field from being pre-filled when filing new bugs.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/WebKitBugzilla.js:

2011-07-20  Eric Seidel  <eric@webkit.org>

        Move HttpLock to using a FileSystem object
        https://bugs.webkit.org/show_bug.cgi?id=64885

        Reviewed by Adam Barth.

        There is no functional change here.  Just moving off
        of direct os.foo calls to their filesystem equivalent.

        This makes it possible to now unittest HttpLock using a
        MockFileSystem instead of needing to talk to the filesystem directly.

        This also will have changed any port test cases which were using a
        mock file system to now have an HttpLock based on a mock filesystem
        instead.  I saw no change in the unittests so it's possible